syntax = "proto3";

package pb;

import "reservation_all.proto";

option go_package = "github.com/tijanadmi/bookings_backend/pb";

message ListAllReservationsRequest {
    int32 limit = 1;  // Limit soba koje vraÄ‡amo
    int32 offset = 2; // Offset za paginaciju
}

message ListAllReservationsResponse {
    repeated ReservationAll reservations = 1; // Lista soba
}